fix: Retornando para configurações anteriores